# aoc2019

./: Cargo.toml  README.md  tarpaulin-report.html
.github/workflows/: ci.yml
benches/: benchmain.rs
examples/: arkanoid.rs
src/: lib.rs  main.rs
src/day01/: challenge1.rs  challenge2.rs
src/day02/: challenge1.rs  challenge2.rs
src/day03/: challenge1.rs  challenge2.rs
src/day04/: challenge1.rs  challenge2.rs
src/day05/: challenge1.rs  challenge2.rs
src/day06/: challenge1.rs  challenge2.rs
src/day07/: challenge1.rs  challenge2.rs
src/day08/: challenge1.rs  challenge2.rs
src/day09/: challenge1.rs  challenge2.rs
src/day1/: challenge1.rs  challenge2.rs
src/day10/: challenge1.rs  challenge2.rs
src/day11/: challenge1.rs  challenge2.rs
src/day12/: challenge1.rs  challenge2.rs
src/day13/: challenge1.rs  challenge2.rs
src/day14/: challenge1.rs  challenge2.rs
src/day15/: challenge1.rs  challenge2.rs
src/day16/: challenge1.rs  challenge2.rs
src/day17/: challenge1.rs  challenge2.rs  manual  mod.rs
src/day18/: challenge1.rs  challenge2.rs  concurrent.rs
src/day19/: challenge1.rs  challenge2.rs
src/day2/: challenge1.rs  challenge2.rs
src/day20/: challenge1.rs  challenge2.rs
src/day21/: challenge1.rs  challenge2.rs
src/day22/: challenge1.rs  challenge2.rs
src/day23/: challenge1.rs  challenge2.rs
src/day24/: challenge1.rs  challenge2.rs
src/day25/: challenge1.rs  challenge2.rs
src/day3/: challenge1.rs  challenge2.rs
src/day4/: challenge1.rs  challenge2.rs
src/day5/: challenge1.rs  challenge2.rs
src/day6/: challenge1.rs  (+1 more)
(+6 files in other folders)
