[package]
name = "aoc2019"
version = "0.1.0"
authors = ["jonay2000 <jonabent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.0"
tty-read = { git = "https://github.com/timvisee/tty-read-rs" }
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"

[profile.test]
opt-level = 3

[[bench]]
name = "benchmain"
harness = false
